Revert "Prevent overlapping of the buttons for certain devices."
This reverts commit 9133ddc6e5e96d47a4945f094622bed64c33591d.

--- a/APPS/Settings/settings.css
+++ b/APPS/Settings/settings.css
@@ -95,7 +95,6 @@ div {
   text-decoration: none;
   color: white;
   transition-duration: 0.2s;
-  display: inline-block;
 }
 
 .button:hover {
