--- a/System_Files/css/index.css
+++ b/System_Files/css/index.css
@@ -20,7 +20,6 @@ h1 {
   text-decoration: none;
   color: white;
   transition-duration: 0.2s;
-  display: inline-block;
 }
 
 
